    * Initial KNotify support.
    * Show total playlist file size in a tooltip when hovering over the total
      play list time. (BR 91640)
    * Implemented Jump To. Press Ctrl+J to focus the playlist search.
      (BR 92400)
    * Made Love/Skip/Ban/Enqueue/Dequeue available in Shortcuts configuration
      dialog. (BR 136232, BR 187542)

  CHANGES:
    * Renamed "Browsers" panel to more suited "Content" panel.
    * Improvements to the row heights in the playlist, making especially the
      size of the rating stars more consistent.
    * Usability improvements in the Context View's applet tab bar.
    * Collection scanner won't scan a directory more than once if passed in
      multiple times. Should significantly speed up certain incremental
      scanning cases.
    * When doing a recursive incremental scan, the scanner will no longer scan
      subdirectories of changed directories if those subdirectories' mtimes
      have not changed, for extremely large speedups in some cases. For very
      flat collection trees, the difference is basically between a small
      incremental scan and a near full rescan.
    * Ask the user for confirmation before refetching lyrics and overwriting
      cached ones.
    * It is now possible to stop editing lyrics without saving changes in
      the lyrics applet.

  BUGFIXES:
    * The On Screen Display now uses a sane font size with all display
      resolutions. (BR 195186)
    * Fix rare regression where inaccessible subfolders (due to permissions)
      in the collection could not be picked up by an incremental scan when
      permissions were fixed and their mtime updated, requiring a full rescan.
    * When using a MySQL server with "Watch Folders For Changes" disabled,
      very long periods of idle Amarok could allow the server to close the
      local connection. This is now detected and should be worked around. 
    * Correctly set the lyrics applet's title when displaying HTML formatted lyrics